<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    tools:context=".MainActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gr"
                    android:textSize="25sp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginBottom="30dp" />

                <ImageButton
                    android:background="@color/colorPrimary"
                    android:id="@+id/captureBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_camera"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:layout_margin="20dp" />

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_camera"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_name"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorPrimary"
                    android:padding="5dp"
                    android:layout_margin="20dp"
                    android:visibility="gone"/>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_height="wrap_content">


                    <RadioButton
                        android:id="@+id/radio_robi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:text="@string/robi"
                        android:checked="true"
                        android:padding="5dp" />
                    <RadioButton
                        android:id="@+id/radio_airtel"
                        android:layout_width="wrap_content"
                        android:textColor="@color/colorText"
                        android:layout_height="wrap_content"
                        android:text="@string/airtel"
                        android:padding="5dp" />

                    <RadioButton
                        android:id="@+id/radio_gp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:text="@string/grameenphone"
                        android:padding="5dp"/>

                    <RadioButton
                        android:id="@+id/radio_banglalink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:text="@string/banglalink"
                        android:padding="5dp" />
                    <RadioButton
                        android:id="@+id/radio_taletalk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:text="@string/telitalk"
                        android:padding="5dp" />


                </RadioGroup>

                <Button
                    android:id="@+id/dial_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="How to use?"
                    android:textAllCaps="false"
                    android:layout_marginEnd="5dp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_gravity="end"
                    android:onClick="how"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="20dp" />

                <Button
                    android:id="@+id/delete_btn"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="X"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:background="@color/colorRed"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:visibility="gone"/>


            </LinearLayout>

        </ScrollView>




        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-8851464520979715/2006338390">
        </com.google.android.gms.ads.AdView>



</RelativeLayout>